# POS

./: CMakeLists.txt  Makefile  kviz.c  kviz.h  main.c
klient/: hrac.c  hrac.h  klient.c  klient.h
klient/sockety/: client_socket.c  client_socket.h
server/: hrac.c  hrac.h  kviz.c  kviz.h  moderator.c  moderator.h  server.c  server.h  server_main.c
